tests-integration/tests/roundtrip/invalid/semantic/typecheck/tuple_literal_in_aggregate_expr/tree-sitter.expected-error.txt
tests/roundtrip/invalid/semantic/typecheck/tuple_literal_in_aggregate_expr/input.essence:2:15:
  |
2 | such that min((5, 3)) = 1
  |               ^
Type error: (5, 3)
	Expected: set or matrix
	Got: tuple